# AoC-2025

./: app.py  main.py  nitf.parquet  pyproject.toml
services/: day1.py  day2.py
solutions/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day8_cheat.py
utilities/: grid_print.py
